--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^2.0.0",
     "node-fetch": "^1.5.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "watchify": "^3.7.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run build-data && browserify src/photobook.js -o bundle.js -t babelify",
